src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Alternative_BG__c</fullName>
        <description>Alternative BG is annually updated every Q4, and its source is GSM Controller.</description>
        <formula>CASE(
    BU__c ,
    &apos;510&apos; , &apos;8000 High Performance Mixed Signal&apos; ,
    &apos;513&apos; , &apos;8000 High Performance Mixed Signal&apos; ,
    &apos;514&apos; , &apos;8000 High Performance Mixed Signal&apos; ,
    &apos;525&apos; , &apos;8000 High Performance Mixed Signal&apos; ,
    &apos;527&apos; , &apos;8000 High Performance Mixed Signal&apos; ,
    &apos;580&apos; , &apos;8000 High Performance Mixed Signal&apos; ,
    &apos;511&apos; , &apos;8001 Standard Products&apos; ,
    &apos;581&apos; , &apos;8001 Standard Products&apos; ,
    &apos;540&apos; , &apos;8020 Technology &amp; Operations&apos; ,
    &apos;541&apos; , &apos;8020 Technology &amp; Operations&apos; ,
    &apos;591&apos; , &apos;8025 Corporate &amp; Other&apos; ,
    &apos;592&apos; , &apos;8025 Corporate &amp; Other&apos; ,
    &apos;593&apos; , &apos;8025 Corporate &amp; Other&apos; ,
    &apos;594&apos; , &apos;8025 Corporate &amp; Other&apos; ,
    &apos;599&apos; , &apos;8025 Corporate &amp; Other&apos; ,
    &apos;&apos;
)</formula>
        <label>Alternative BG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_BL__c</fullName>
        <description>Alternative BL is annualy updated every Q4, and its source is GSM Controller.</description>
        <formula>IF(
    MAG__c = &apos;R67&apos; ,
    &apos;BL01 BL SECURE INTERFACE &amp; POWER&apos; ,
    BL__c &amp; &apos; &apos; &amp;  BL_Description__c
)</formula>
        <label>Alternative BL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_BU__c</fullName>
        <description>Alternative BU is annually updated every Q4, and its source is GSM Controller.</description>
        <formula>IF( 
    MAG__c = &apos;R67&apos; ,
    &apos;510 BU SECURITY &amp; CONNECTIVITY&apos; ,
    IF(
        BU__c = &apos;513&apos; ,
        &apos;511 BU STANDARD PRODUCTS&apos; ,
        BU__c &amp; &apos; &apos; &amp;  BU_Description__c 
    )
)</formula>
        <label>Alternative BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BL_Description__c</fullName>
        <label>BL Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BL__c</fullName>
        <label>BL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Description__c</fullName>
        <label>BU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic_Type_Description__c</fullName>
        <label>Basic Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic_Type__c</fullName>
        <label>Basic Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Margin_MAG__c</fullName>
        <description>High Margin MAG is annually updated every Q4, and its source is GSM Controller.
* As of Spring &apos;15, CASE() cannot return Boolean</description>
        <formula>FALSE</formula>
        <inlineHelpText>The product is of High Margin MAG</inlineHelpText>
        <label>High Margin MAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Legacy Id from FSL</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MAG_Description__c</fullName>
        <label>MAG Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAG__c</fullName>
        <label>MAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NXP_Package_Type_Description__c</fullName>
        <label>NXP Package Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NXP_Package_Type__c</fullName>
        <label>NXP Package Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID_Full__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID_Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Search_Intrane_newt__c</fullName>
        <formula>&quot;http://nww.prod.spider.nxp.com:8513/productinformation/search/&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Search - Intranet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesItem_CSI__c</fullName>
        <description>1602 Release SIR 450</description>
        <inlineHelpText>Sales Item Customer Specific Indicator</inlineHelpText>
        <label>Sales Item CSI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesItem_OrderablePartNumber__c</fullName>
        <description>1602 Release SIR 450</description>
        <label>Sales Item Orderable Part Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesItem_ProductState__c</fullName>
        <label>Sales Item Product State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Item_Market_Segment__c</fullName>
        <description>Automotive product flag</description>
        <label>Sales Item Market Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Item__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Sales Item</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Thrust_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Thrust product indicator</description>
        <label>z_OBSOLETED_Thrust Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_System__c</fullName>
        <label>Type System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X9NC__c</fullName>
        <formula>LEFT( Sales_Item__c ,9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>9NC</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Sales_Item__c</columns>
        <columns>Basic_Type__c</columns>
        <columns>Basic_Type_Description__c</columns>
        <columns>BL__c</columns>
        <columns>BL_Description__c</columns>
        <columns>BU__c</columns>
        <columns>BU_Description__c</columns>
        <columns>MAG__c</columns>
        <columns>MAG_Description__c</columns>
        <columns>NXP_Package_Type__c</columns>
        <columns>NXP_Package_Type_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>Basic_Type</fullName>
        <active>true</active>
        <description>Basic Type</description>
        <label>Basic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Item</fullName>
        <active>true</active>
        <description>Sales Item</description>
        <label>Sales Item</label>
    </recordTypes>
</CustomObject>